# HttpWebserver

./: .gitignore  CMakeLists.txt  config_version.h.in
examples/: CMakeLists.txt
examples/src/: dispatcher_example.cpp  logging_example.cpp  read_file_example.cpp  socket_example.cpp  test_file.html
include/: config_version.h
include/factories/: dispatcher_factory.h  multiplexer_factory.h  request_handler_factory.h  router_factory.h  socket_factory.h
include/handlers/: accept_handler.h  read_handler.h  request_handler.h
include/logging/: logging.h
include/multiplexer/: multiplexer.h  request_dispatcher.h  select_dispatcher.h  select_multiplexer.h
include/server/: router.h  server.h  url_router.h
include/server/http/: parser.h  request.h  response.h  types.h
include/socket/: linux_socket.h  socket.h  windows_socket.h
include/util/: blocking_queue.h  blocking_queue.tpl  datetime.h  duration.h  http_parser.h  types.h  util.h
src/: util.h
src/multiplexer/: accept_handler.cpp  dispatcher_factory.cpp  multiplexer_factory.cpp  read_handler.cpp  request_handler_factory.cpp  select_dispatcher.cpp  select_multiplexer.cpp
src/server/: http_parser.cpp  http_response.cpp  server.cpp  types.cpp  url_router.cpp  url_router_factory.cpp
src/socket/: linux_socket.cpp  windows_socket.cpp
src/util/: datetime.cpp  duration.cpp  http_parser.cpp  util.cpp
tests/: CMakeLists.txt
tests/http_parser/: http_parser_tests.cpp
tests/util/: util_tests.cpp
